syntax = "proto3";

package star_types;

import "change_set.proto";
import "transaction.proto";
import "events.proto";
import "vm_errors.proto";

message TransactionOutput {
    ChangeSet change_set = 1;
    repeated types.Event events = 2;
    uint64 gas_used = 3;
    TransactionStatus status = 4;
}

message TransactionStatus {
    oneof transaction_status {
        types.VMStatus Discard = 1;
        types.VMStatus Keep = 2;
    }
}